feat: group 관련 api 구현 완료
